cabal-version: 1.12

name:           hcloud-haskell
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      HCloud
      HCloud.Operations.GetActions
      HCloud.Operations.GetActionsId_
      HCloud.Operations.GetCertificates
      HCloud.Operations.PostCertificates
      HCloud.Operations.GetCertificatesId_
      HCloud.Operations.PutCertificatesId_
      HCloud.Operations.DeleteCertificatesId_
      HCloud.Operations.GetCertificatesIdActions
      HCloud.Operations.PostCertificatesIdActionsRetry
      HCloud.Operations.GetCertificatesIdActionsActionId_
      HCloud.Operations.GetDatacenters
      HCloud.Operations.GetDatacentersId_
      HCloud.Operations.GetFirewalls
      HCloud.Operations.PostFirewalls
      HCloud.Operations.GetFirewallsId_
      HCloud.Operations.PutFirewallsId_
      HCloud.Operations.DeleteFirewallsId_
      HCloud.Operations.GetFirewallsIdActions
      HCloud.Operations.PostFirewallsIdActionsApplyToResources
      HCloud.Operations.PostFirewallsIdActionsRemoveFromResources
      HCloud.Operations.PostFirewallsIdActionsSetRules
      HCloud.Operations.GetFirewallsIdActionsActionId_
      HCloud.Operations.GetFloatingIps
      HCloud.Operations.PostFloatingIps
      HCloud.Operations.GetFloatingIpsId_
      HCloud.Operations.PutFloatingIpsId_
      HCloud.Operations.DeleteFloatingIpsId_
      HCloud.Operations.GetFloatingIpsIdActions
      HCloud.Operations.PostFloatingIpsIdActionsAssign
      HCloud.Operations.PostFloatingIpsIdActionsChangeDnsPtr
      HCloud.Operations.PostFloatingIpsIdActionsChangeProtection
      HCloud.Operations.PostFloatingIpsIdActionsUnassign
      HCloud.Operations.GetFloatingIpsIdActionsActionId_
      HCloud.Operations.GetImages
      HCloud.Operations.GetImagesId_
      HCloud.Operations.PutImagesId_
      HCloud.Operations.DeleteImagesId_
      HCloud.Operations.GetImagesIdActions
      HCloud.Operations.PostImagesIdActionsChangeProtection
      HCloud.Operations.GetImagesIdActionsActionId_
      HCloud.Operations.GetIsos
      HCloud.Operations.GetIsosId_
      HCloud.Operations.GetLoadBalancerTypes
      HCloud.Operations.GetLoadBalancerTypesId_
      HCloud.Operations.GetLoadBalancers
      HCloud.Operations.PostLoadBalancers
      HCloud.Operations.GetLoadBalancersId_
      HCloud.Operations.PutLoadBalancersId_
      HCloud.Operations.DeleteLoadBalancersId_
      HCloud.Operations.GetLoadBalancersIdActions
      HCloud.Operations.PostLoadBalancersIdActionsAddService
      HCloud.Operations.PostLoadBalancersIdActionsAddTarget
      HCloud.Operations.PostLoadBalancersIdActionsAttachToNetwork
      HCloud.Operations.PostLoadBalancersIdActionsChangeAlgorithm
      HCloud.Operations.PostLoadBalancersIdActionsChangeDnsPtr
      HCloud.Operations.PostLoadBalancersIdActionsChangeProtection
      HCloud.Operations.PostLoadBalancersIdActionsChangeType
      HCloud.Operations.PostLoadBalancersIdActionsDeleteService
      HCloud.Operations.PostLoadBalancersIdActionsDetachFromNetwork
      HCloud.Operations.PostLoadBalancersIdActionsDisablePublicInterface
      HCloud.Operations.PostLoadBalancersIdActionsEnablePublicInterface
      HCloud.Operations.PostLoadBalancersIdActionsRemoveTarget
      HCloud.Operations.PostLoadBalancersIdActionsUpdateService
      HCloud.Operations.GetLoadBalancersIdActionsActionId_
      HCloud.Operations.GetLoadBalancersIdMetrics
      HCloud.Operations.GetLocations
      HCloud.Operations.GetLocationsId_
      HCloud.Operations.GetNetworks
      HCloud.Operations.PostNetworks
      HCloud.Operations.GetNetworksId_
      HCloud.Operations.PutNetworksId_
      HCloud.Operations.DeleteNetworksId_
      HCloud.Operations.GetNetworksIdActions
      HCloud.Operations.PostNetworksIdActionsAddRoute
      HCloud.Operations.PostNetworksIdActionsAddSubnet
      HCloud.Operations.PostNetworksIdActionsChangeIpRange
      HCloud.Operations.PostNetworksIdActionsChangeProtection
      HCloud.Operations.PostNetworksIdActionsDeleteRoute
      HCloud.Operations.PostNetworksIdActionsDeleteSubnet
      HCloud.Operations.GetNetworksIdActionsActionId_
      HCloud.Operations.GetPlacementGroups
      HCloud.Operations.PostPlacementGroups
      HCloud.Operations.GetPlacementGroupsId_
      HCloud.Operations.PutPlacementGroupsId_
      HCloud.Operations.DeletePlacementGroupsId_
      HCloud.Operations.GetPricing
      HCloud.Operations.GetServerTypes
      HCloud.Operations.GetServerTypesId_
      HCloud.Operations.GetServers
      HCloud.Operations.PostServers
      HCloud.Operations.GetServersId_
      HCloud.Operations.PutServersId_
      HCloud.Operations.DeleteServersId_
      HCloud.Operations.GetServersIdActions
      HCloud.Operations.PostServersIdActionsAddToPlacementGroup
      HCloud.Operations.PostServersIdActionsAttachIso
      HCloud.Operations.PostServersIdActionsAttachToNetwork
      HCloud.Operations.PostServersIdActionsChangeAliasIps
      HCloud.Operations.PostServersIdActionsChangeDnsPtr
      HCloud.Operations.PostServersIdActionsChangeProtection
      HCloud.Operations.PostServersIdActionsChangeType
      HCloud.Operations.PostServersIdActionsCreateImage
      HCloud.Operations.PostServersIdActionsDetachFromNetwork
      HCloud.Operations.PostServersIdActionsDetachIso
      HCloud.Operations.PostServersIdActionsDisableBackup
      HCloud.Operations.PostServersIdActionsDisableRescue
      HCloud.Operations.PostServersIdActionsEnableBackup
      HCloud.Operations.PostServersIdActionsEnableRescue
      HCloud.Operations.PostServersIdActionsPoweroff
      HCloud.Operations.PostServersIdActionsPoweron
      HCloud.Operations.PostServersIdActionsReboot
      HCloud.Operations.PostServersIdActionsRebuild
      HCloud.Operations.PostServersIdActionsRemoveFromPlacementGroup
      HCloud.Operations.PostServersIdActionsRequestConsole
      HCloud.Operations.PostServersIdActionsReset
      HCloud.Operations.PostServersIdActionsResetPassword
      HCloud.Operations.PostServersIdActionsShutdown
      HCloud.Operations.GetServersIdActionsActionId_
      HCloud.Operations.GetServersIdMetrics
      HCloud.Operations.GetSshKeys
      HCloud.Operations.PostSshKeys
      HCloud.Operations.GetSshKeysId_
      HCloud.Operations.PutSshKeysId_
      HCloud.Operations.DeleteSshKeysId_
      HCloud.Operations.GetVolumes
      HCloud.Operations.PostVolumes
      HCloud.Operations.GetVolumesId_
      HCloud.Operations.PutVolumesId_
      HCloud.Operations.DeleteVolumesId_
      HCloud.Operations.GetVolumesIdActions
      HCloud.Operations.PostVolumesIdActionsAttach
      HCloud.Operations.PostVolumesIdActionsChangeProtection
      HCloud.Operations.PostVolumesIdActionsDetach
      HCloud.Operations.PostVolumesIdActionsResize
      HCloud.Operations.GetVolumesIdActionsActionId_
      HCloud.Types
      HCloud.TypeAlias
      HCloud.Configuration
      HCloud.SecuritySchemes
      HCloud.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
